--- a/projects/pizzaChart/styles.css
+++ b/projects/pizzaChart/styles.css
@@ -94,10 +94,23 @@ main{
   background-color: var(--orange);
 }
 .footer--price{
-  font-weight: bold;  
+   
   margin: 0;
   font-size: .8rem;
 }
 .price--amount{
   font-size: 1.2rem;
- }
+  font-weight: bold;
+}
+.order--popup{
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  backdrop-filter: blur(2px);
+  position: fixed;
+  z-index: 10;
+}
+.popup--container{
+  position:relative;
+  top: 60%;
+}
